# doc_crawler

./: .gitignore  pyproject.toml  temp.md  temp.py
docs/: dev-outline.md  prompt.md  spec.md
docs/config/: exceptions.md  loader.md  manager.md  models.md  validator.md
docs/database/indexes/: content_changes_indexes.md  crawl_sessions_indexes.md  page_indexes.md  processing_queue_indexes.md
docs/database/models/: alerts.md  author_works.md  content_changes.md  content_index.md  crawl_sessions.md  historical_date.md  pages.md  processing_queue.md  site_maps.md  sites.md
docs/database/repositories/: alerts_repository.md  async_mongo_repository.md  author_works_repository.md  content_changes_repository.md  crawl_sessions_repository.md  pages_repository.md  processing_queue_repository.md  sites_repositories.md
src/doc_crawler/config/: __init__.py  exceptions.py  loader.py  manager.py  models.py  validator.py
src/doc_crawler/database/: exceptions.py
tests/config/: test_integration.py  test_loader.py  test_manager.py  test_validator.py
tests/database/indexes/: test_crawl_sessions_indexes.py  test_page_indexes.py  test_processing_queue_indexes.py
tests/database/models/: conftest.py  test_author_works.py  test_content_changes.py  test_content_index.py  test_historical_date.py  test_models.py  test_pages.py  test_site_maps.py  test_sites.py
tests/database/repositories/: repository_utils.py  test_alerts.py  test_async_mongo_repository.py  test_author_works_repository.py  test_content_changes_indexes.py  test_content_index_repository.py  test_crawl_sessions.py  (+5 more)
(+29 files in other folders)
